tests/should_succeed/octalnuber.jou
from "stdlib/io.jou" import printf

def main()-> int:
    printf("%d", 0o777) # Should be 511
    printf("%d", 0o337522) # Should be 114514
    printf("%d", 0o7244314) # Should be 1919180
    return 0
