tests/syntax_error/import_after_def.jou
def foo() -> void:
    return

from "stdlib/io.jou" import printf  # Error: imports must be in the beginning of the file
